--- a/index.html
+++ b/index.html
@@ -744,10 +744,11 @@
         <div class="card-name">Assignments</div>
         <div class="card-desc">Download task PDFs & instructions</div>
       </a>
-      <a href="submission.html" class="card">
+      <a href="submission.html" class="card" style="opacity:0.6;pointer-events:none;position:relative;">
         <div class="card-icon ic-yellow">📝</div>
         <div class="card-name">Submission</div>
         <div class="card-desc">Submit your assignment links</div>
+        <div style="position:absolute;top:8px;right:8px;background:#F59E0B;color:#fff;font-size:0.6rem;font-weight:700;padding:2px 7px;border-radius:999px;font-family:'IBM Plex Mono',monospace;">SOON</div>
       </a>
 
     </div>
@@ -797,14 +798,7 @@
     <div class="section-label">News & Updates</div>
     <div class="section-title">Latest from English Quest</div>
     <div class="wide-grid">
-      <a href="#" class="card-wide">
-        <div class="card-wide-icon ic-purple">📣</div>
-        <div class="card-wide-body">
-          <div class="card-wide-title">Class Announcements</div>
-          <div class="card-wide-sub">Important notices & reminders</div>
-        </div>
-        <div class="card-wide-arrow">›</div>
-      </a>
+
       <div class="sched-wrap">
         <div class="sched-header" onclick="toggleSched()">
           <span class="sched-icon">🗓️</span>
@@ -819,11 +813,11 @@
           <div class="sched-content" id="schedContent"></div>
         </div>
       </div>
-      <a href="#" class="card-wide">
+      <a href="summative.html" class="card-wide">
         <div class="card-wide-icon ic-green">🎯</div>
         <div class="card-wide-body">
           <div class="card-wide-title">Summative Assessments</div>
-          <div class="card-wide-sub">Test info & results</div>
+          <div class="card-wide-sub">Exam schedule, topics & what to study</div>
         </div>
         <div class="card-wide-arrow">›</div>
       </a>
@@ -841,15 +835,17 @@
         <div class="card-name">Instagram</div>
         <div class="card-desc">@engquest.viska</div>
       </a>
-      <a href="#" class="card">
+      <a href="#" class="card" style="opacity:0.6;pointer-events:none;position:relative;" onclick="return false;">
         <div class="card-icon ic-blue">🖼️</div>
         <div class="card-name">Photo Gallery</div>
         <div class="card-desc">Class moments</div>
+        <div style="position:absolute;top:8px;right:8px;background:#3B82F6;color:#fff;font-size:0.6rem;font-weight:700;padding:2px 7px;border-radius:999px;font-family:'IBM Plex Mono',monospace;">SOON</div>
       </a>
-      <a href="#" class="card">
+      <a href="#" class="card" style="opacity:0.6;pointer-events:none;position:relative;" onclick="return false;">
         <div class="card-icon ic-yellow">🏅</div>
         <div class="card-name">Achievements</div>
         <div class="card-desc">Awards & recognition</div>
+        <div style="position:absolute;top:8px;right:8px;background:#F59E0B;color:#fff;font-size:0.6rem;font-weight:700;padding:2px 7px;border-radius:999px;font-family:'IBM Plex Mono',monospace;">SOON</div>
       </a>
 
     </div>
